# factory-methods-naive

./: CMakeLists.txt  README.md  run.bat  ticket.drawio
src/: BusinessTicket.cpp  BusinessTicket.hpp  EconomyTicket.cpp  EconomyTicket.hpp  FirstClassTicket.cpp  FirstClassTicket.hpp  main.cpp
